Always give the correct RawDecodingHint to the loading descriptions. This should ensure that the raw decoding settings are compared in detail before retrieving an image from the cache.

BUG: 211681

svn path=/trunk/extragear/graphics/digikam/; revision=1067526